<resources>
    <string name="app_name">Pet Lover</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Choose_options">Select the type of account</string>

    <string-array name="type_string">
        <item>User</item>
        <item>Doctor</item>
        <item>Store</item>

    </string-array>

    <string name="pet_shilter">Pet Shilter</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="email">Email:</string>
    <string name="date_of_creating_your_note">Date of creating your note</string>
    <string name="name_of_pet">name of pet</string>

    <string-array name="cities">
        <item> Cities....</item>
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Giza</item>
        <item>Shubra El-Kheima</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>Luxor</item>
        <item>al-Mansura</item>
        <item>El-Mahalla El-Kubra</item>
        <item>Tanta</item>
        <item>Asyut</item>
        <item>Ismailia</item>
        <item>Fayyum</item>
        <item>Zagazig</item>
        <item>Aswan</item>
        <item>Damietta</item>
        <item>Damanhur</item>
        <item>al-Minya</item>
        <item>Beni Suef</item>
        <item>Qena</item>
        <item>Sohag</item>
        <item>Hurghada</item>
        <item>6th of October City</item>
        <item>Shibin El Kom</item>
        <item>Banha</item>
        <item>Kafr el-Sheikh</item>
        <item>Arish</item>
        <item>Mallawi</item>
        <item>10th of Ramadan City</item>
        <item>Bilbais</item>
        <item>Marsa Matruh</item>
        <item>Idfu</item>
        <item>Mit Ghamr</item>
        <item>El-Hawamdeyya</item>
        <item>Desouk</item>
        <item>Qalyub</item>
        <item>Abu Kabir</item>
        <item>Kafr el-Dawwar</item>
        <item>Girga</item>
        <item>Akhmim</item>
        <item>Matareya</item>
    </string-array>
</resources>
